--- a/CA2/Part1/gradle_basic_demo/build.gradle
+++ b/CA2/Part1/gradle_basic_demo/build.gradle
@@ -46,7 +46,7 @@ jar {
 }
 
 
-
+//Define a task to run the client
 task runClient(type:JavaExec, dependsOn: classes){
     group = "DevOps"
     description = "Launches a chat client that connects to a server on localhost:59001 "
@@ -56,4 +56,16 @@ task runClient(type:JavaExec, dependsOn: classes){
     mainClass = 'basic_demo.ChatClientApp'
 
     args 'localhost', '59001'
+}
+
+//Define a task to run the server
+task runServer(type:JavaExec, dependsOn: classes){
+    group = "DevOps"
+    description = "Starts the chat server on a predefined chosen port on the host machine (port number 59001 is used)"
+
+    classpath = sourceSets.main.runtimeClasspath
+
+    mainClass = 'basic_demo.ChatServerApp'
+
+    args '59001'
 }
