--- a/CA2/Part1/gradle_basic_demo/build.gradle
+++ b/CA2/Part1/gradle_basic_demo/build.gradle
@@ -21,10 +21,13 @@ configurations {
     extraLibs
 }
 
+// Define all required dependencies
 dependencies {
     // Use Apache Log4J for logging
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
+    //Use JUnit framework for unit testing
+    testImplementation 'junit:junit:4.12'
 }
  
 
