[feat]: add a new task to create a copy of all the source files. Fixes #8
Includes:
- task name: backCopy
- png file showing project structure before and after running the task

--- a/CA2/Part1/gradle_basic_demo/build.gradle
+++ b/CA2/Part1/gradle_basic_demo/build.gradle
@@ -72,3 +72,11 @@ task runServer(type:JavaExec, dependsOn: classes){
 
     args '59001'
 }
+
+// Define a task to make a copy of all the source code
+task backupCopy(type:Copy){
+    group = "Backup"
+    description = "Creates a backup copy of all the source code, including tests"
+    from 'src/'
+    into 'build/backup'
+}
