[feat]: add a new task to create a zip file of all the source files. Fixes #9
Includes:
- task name: zipSources
- png file showing project structure before and after running the task
- png file displaying the 2 Backup Group tasks

--- a/CA2/Part1/gradle_basic_demo/build.gradle
+++ b/CA2/Part1/gradle_basic_demo/build.gradle
@@ -80,3 +80,12 @@ task backupCopy(type:Copy){
     from 'src/'
     into 'build/backup'
 }
+
+// Define a task to create a ZIP file containing all the source code files and directories
+task zipSources(type:Zip){
+    group = "Backup"
+    description = "Creates a zip file containing all the source code, including tests"
+    from 'src/'
+    archiveFileName = 'sources_backup.zip'
+    destinationDir = file('build/backup')
+}
