--- a/CA2/Part2/react-and-spring-data-rest-basic/build.gradle
+++ b/CA2/Part2/react-and-spring-data-rest-basic/build.gradle
@@ -34,3 +34,12 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+task copyJarFile(type:Copy, dependsOn:bootJar){
+	group = "Backup"
+	description = "Copies the generated jar file to a folder named 'dist' located at the project root folder level"
+	from 'build/libs'
+	into 'dist'
+	include '*.jar'
+}
+
