--- a/CA2/Part2/react-and-spring-data-rest-basic/build.gradle
+++ b/CA2/Part2/react-and-spring-data-rest-basic/build.gradle
@@ -37,9 +37,17 @@ tasks.named('test') {
 
 task copyJarFile(type:Copy, dependsOn:bootJar){
 	group = "Backup"
-	description = "Copies the generated jar file to a folder named 'dist' located at the project root folder level"
+	description = "Copies the generated jar file to a folder named 'dist' located at the project root folder level."
 	from 'build/libs'
 	into 'dist'
 	include '*.jar'
 }
+
+task cleanWebpackFiles(type:Delete){
+	group = "Build"
+	description = "Deletes the generated webpack files."
+	delete 'src/main/resources/static/built/'
+}
+
+clean.dependsOn(cleanWebpackFiles)
 
