--- a/CA2/Part2/react-and-spring-data-rest-basic/build.gradle
+++ b/CA2/Part2/react-and-spring-data-rest-basic/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.2.4'
 	id 'io.spring.dependency-management' version '1.1.4'
 	id "org.siouan.frontend-jdk17" version "8.0.0"
+	id 'war'
 }
 
 frontend {
@@ -19,6 +20,10 @@ java {
 	sourceCompatibility = '17'
 }
 
+tasks.named('bootRun') {
+	systemProperty 'spring.datasource.url', 'jdbc:h2:mem:jpadb'
+}
+
 repositories {
 	mavenCentral()
 }
@@ -29,6 +34,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// To support war file for deploying to tomcat
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
 
 tasks.named('test') {
