[docs]: update Jenkinsfile. Fixes #33

--- a/CA5/Part1/Jenkinsfile
+++ b/CA5/Part1/Jenkinsfile
@@ -5,15 +5,20 @@ pipeline {
         stage('Checkout') {
             steps {
                  echo 'Checking out...'
-                 git 'https://github.com/MarianaPereira7/devops-23-24-JPE-PSM-1231844.git'
+                 dir('devops-23-24-JPE-PSM-1231844'){
+                 git branch: 'main',
+                    url: 'https://github.com/MarianaPereira7/devops-23-24-JPE-PSM-1231844'
+                 }
             }
         }
 
         stage('Assemble') {
             steps {
                  echo 'Assembling...'
-                 dir('devops-23-24-JPE-PSM-1231844/CA2/Part1/gradle_basic_demo')
+                 dir('devops-23-24-JPE-PSM-1231844/CA2/Part1/gradle_basic_demo/'){
+                    sh 'chmod +x gradlew'
                     sh './gradlew assemble'
+                 }
             }
         }
 
@@ -30,8 +35,9 @@ pipeline {
         stage('Archiving') {
             steps {
                  echo 'Archiving...'
-                 dir('devops-23-24-JPE-PSM-1231844/CA2/Part1/gradle_basic_demo')
+                 dir('devops-23-24-JPE-PSM-1231844/CA2/Part1/gradle_basic_demo'){
                     archiveArtifacts 'build/distributions/*'
+                 }
             }
         }
     }
